k8s/next-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextjs
  namespace: portfolio
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nextjs
  template:
    metadata:
      labels:
        app: nextjs
    spec:
      containers:
        - name: nextjs
          image: ghcr.io/atakowiec/nextjs-app:latest
          ports:
            - containerPort: 3000
