k8s/strapi-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: strapi
  namespace: portfolio
spec:
  replicas: 1
  selector:
    matchLabels:
      app: strapi
  template:
    metadata:
      labels:
        app: strapi
    spec:
      containers:
        - name: strapi
          image: ghcr.io/atakowiec/strapi-app:latest
          ports:
            - containerPort: 1337
          volumeMounts:
            - mountPath: /app/public/uploads
              name: uploads
      volumes:
        - name: uploads
          persistentVolumeClaim:
            claimName: strapi-uploads-pvc
