k8s/next-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nextjs
  namespace: portfolio
spec:
  selector:
    app: nextjs
  ports:
    - port: 80
      targetPort: 3000
