k8s/strapi-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: strapi
  namespace: portfolio
spec:
  selector:
    app: strapi
  ports:
    - port: 80
      targetPort: 1337
