k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: portfolio-ingress
  namespace: portfolio
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: cieszczyk.pl
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nextjs
                port:
                  number: 80
    - host: strapi.cieszczyk.pl
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: strapi
                port:
                  number: 80
